# aska-daemon

./: .gitignore  AskaConfig.toml  Cargo.toml  LICENSE  README.md  ai-prompts.yaml  aska-config-internal.lua  aska-config.lua  build.rs  flake.nix  main.http  main.hurl  profile.json  vars.env
benches/: main.rs
logic/: Cargo.toml
logic/src/: lib.rs
logic/src/workers/: mod.rs  utils.rs
logic/src/workers_infrastructure/: mod.rs  worker_states.rs
modules/: Cargo.toml
modules/src/: lib.rs
modules/src/debug/: mod.rs
modules/src/debug/workers/: mod.rs  processes_workers.rs
modules/src/systeminfo/handlers/fetch/: mod.rs  param_config.rs
modules/src/telegram/: mod.rs  worker.rs
protos/: main.proto
protos/fetch/info/: fetch.proto
protos/fetch/info/hardware/: cpu.proto
protos/fetch/info/software/: mnt.proto  sys.proto
server/: Cargo.toml
server/src/: lib.rs  routing.rs
server/src/fetch_dto/: mod.rs
server/src/http/: mod.rs
server/src/http/middlewares/: logging.rs
server/src/http/services/fetches/hardware/cpu/: mod.rs
server/src/http/services/fetches/hardware/drv/: mod.rs
server/src/http/services/fetches/hardware/ram/: mod.rs
server/src/http/services/fetches/software/mnt/: mod.rs
server/src/http/services/fetches/software/sys/: mod.rs
server/src/routing/: ws_utils.rs
server/src/ws/: mod.rs
service/: Cargo.toml  build.rs
service/src/: lib.rs
service/src/fetches/: mod.rs
service/src/fetches/hardware/cpu/: mod.rs
service/src/fetches/hardware/drv/: mod.rs
service/src/fetches/hardware/ram/: mod.rs
service/src/fetches/software/mnt/: mod.rs
service/src/fetches/software/sys/: mod.rs
service/src/osmodules/osdependent/unix/: placeholder
service/src/services/: mod.rs
service/src/services/fetchservice/: mod.rs  param_config.rs
service/src/services/fetchservice/info/hardware/cpu/: mod.rs
service/src/services/fetchservice/info/hardware/drv/: mod.rs
service/src/services/fetchservice/info/hardware/ram/: mod.rs
service/src/services/fetchservice/info/software/mnt/: mod.rs
service/src/services/info/: mod.rs
service/src/services/info/hardware/: mod.rs
service/src/services/info/hardware/cpu/: mod.rs
shared/: Cargo.toml
shared/src/: configuration.rs  lib.rs
shared/src/logging_engine/: mod.rs
shared/src/utils/: mod.rs
src/: logging.rs  main.rs  preview.rs
src/client/: main.rs
src/crates/features/: Cargo.toml
src/crates/features/src/: lexicon.rs  lib.rs  telegram_service.rs
src/crates/features/src/debug/: mod.rs
src/crates/features/src/debug/workers/: processes_workers.rs
src/crates/features/src/llm_api/: alta_s_api.rs  groq_api.rs  mod.rs
src/crates/features/src/mistral/: mod.rs
src/crates/features/src/services/: mod.rs
src/crates/features/src/services/commands/music/: mod.rs
src/crates/features/src/workers/: action_worker.rs  mod.rs
src/crates/logic/: Cargo.toml
src/crates/logic/src/: lib.rs
src/crates/logic/src/event_infrastructure/: mod.rs
src/crates/macros/: Cargo.toml  README.md
src/crates/macros/src/: lib.rs  property.rs
src/crates/macros/tests/: build_property.rs
src/crates/modules/: Cargo.toml
src/crates/modules/src/: lib.rs  utils.rs
src/crates/server/: Cargo.toml
src/crates/server/src/: lib.rs  requests.rs  responses.rs  routing.rs  ws_utils.rs
src/crates/server/src/requests/: mod.rs
src/crates/server/src/responses/: mod.rs
src/crates/service/: Cargo.toml
src/crates/service/src/services/: mod.rs
src/crates/service/src/services/commands/music/: mod.rs
src/crates/services/: Cargo.toml
src/crates/services/src/: lexicon.rs  lib.rs
src/crates/services/src/llm_api/: alta_s_api.rs  groq_api.rs  mod.rs
src/crates/services/src/services/commands/music/: mod.rs
src/crates/services/src/services/info/software/: mod.rs
src/crates/shared/: Cargo.toml
src/crates/shared/src/: configuration.rs  event_system.rs  lib.rs  llm.rs  serde_extensions.rs  shell.rs  state.rs  traits.rs  types.rs
src/crates/shared/src/event_system/: dispatching.rs  mod.rs  readme.md
src/crates/shared/src/logging_engine/: mod.rs
src/crates/shared/src/utils/: file_utils.rs  mod.rs  shell_utils.rs
src/crates/tgbot/: Cargo.toml
src/crates/tgbot/src/: handlers.rs  lexicon.rs  lib.rs  music_dispatching.rs  prerun.rs
src/crates/usecases/: Cargo.toml
src/crates/usecases/src/: lib.rs  music_control.rs  tools.rs  usecases.rs
src/crates/usecases/src/scenarios/: mod.rs
src/crates/usecases/src/scenarios/music_control/: mod.rs
src/crates/usecases/src/scenarios/system_monitoring/: mod.rs
src/crates/usecases/src/shared_workers/: mod.rs
src/crates/usecases/src/workers/: action_worker.rs  mod.rs
src/serverside/: configuration.rs  main.rs  preview.rs
src/serverside/logging_engine/: configuration.rs  mod.rs
src/serverside/polling/: mod.rs
src/serverside/server/: grpc.rs  http.rs  mod.rs
src/serverside/server/grpc/: fetch.rs  mod.rs
src/serverside/server/grpc/fetches/: mod.rs
src/serverside/server/grpc/fetches/hardware/cpu/: mod.rs
src/serverside/server/grpc/fetches/software/: mod.rs
src/serverside/server/grpc/fetches/software/mnt/: mod.rs
src/serverside/server/grpc/fetches/software/sys/: mod.rs
src/serverside/server/grpc/services/: mod.rs
src/serverside/server/http/: mod.rs
src/serverside/server/http/middlewares/: logging.rs
src/serverside/server/http/services/fetches/: mod.rs
src/serverside/server/middlewares/logging/: mod.rs
src/serverside/service/: mod.rs
src/serverside/service/driveservice/: mod.rs
src/serverside/service/fetchservice/: basicinfo.rs  infobyfilter.rs  macro_util.rs  memoryinfo.rs  mod.rs  param_config.rs
src/serverside/service/fetchservice/info/: mod.rs
src/serverside/service/fetchservice/info/software/: mod.rs
src/serverside/service/fetchservice/infobyfilter/: mod.rs  param_matches.rs
src/serverside/utils/: mod.rs
src/serverside/workers/: mod.rs
usecases/: Cargo.toml
usecases/src/: lib.rs
usecases/src/handlers/: mod.rs
usecases/src/workers/: processes_workers.rs
(+20 files in other folders)
