[package]
name = "aska"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "client"
path = "src/client/main.rs"

[[bin]]
name = "server"
path = "src/serverside/main.rs"

[dependencies]
log = "0.4.22"
log4rs = "1.3.0"
hyper = { version = "1.4.1", features = ["full"] }
tokio = { version = "1.39.2", features = ["full"] }
http-body-util = "0.1.2"
hyper-util = { version = "0.1.6", features = ["full"] }
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tower = "0.4"
colored = "2.1.0"
termion = "4.0.2"
chrono = "0.4.38"
sysinfo = "0.31.0"
form_urlencoded = "1.2.1"
multimap = "0.10.0"
erased-serde = "0.4"
crossterm = "0.28.1"
lazy_static = "1.5.0"
toml = "0.8.19"
serde-env = "0.2.0"
serde_merge = "0.1.3"
derive-getters = { version = "0.5.0", features = ["auto_copy_getters"] }
quote = "1.0"
syn = "1.0"
proc-macro2 = "1.0"
