[workspace]
members = ["server", "service", "shared", "logic", "usecases"]

resolver = "2"

[workspace.package]
name = "aska"
version = "0.1.0"
edition = "2021"

[package]
name = "aska"
version = "0.1.0"
edition = "2021"

[dependencies]
log = "0.4.22"
log4rs = "1.3.0"
hyper = { version = "1.4.1", features = ["full"] }
tokio = { version = "1.39.2", features = ["full"] }
http-body-util = "0.1.2"
hyper-util = { version = "0.1.6", features = ["full"] }

tower = "0.4.13"
serde-env = "0.2.0"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }

colored = "2.1.0"
chrono = "0.4.38"
sysinfo = "0.31.0"
form_urlencoded = "1.2.1"
multimap = "0.10.0"
lazy_static = "1.5.0"
toml = "0.8.19"
merge-struct = "0.1.0"
clap = { version = "4.5.16", features = ["derive"] }
rand = "0.8.5"
queues = "1.1.0"

tonic = "0.12.1"
bytes = "1.7.1"
prost = "0.13.1"
prost-derive = "0.13.1"
tonic-reflection = "0.12.1"

server = { path = "./server" }
service = { path = "./service" }
shared = { path = "./shared" }
logic = { path = "./logic/" }
usecases = { path = "./usecases/" }

[profile.dev]
lto = "off"
opt-level = 0
incremental = true

[profile.release]
opt-level = 3
lto = "fat"

[profile.profiling]
inherits = "release"
debug = true

[build-dependencies]
tonic-build = "0.12.1"
