[workspace]
members = ["./src/crates/server", "./src/crates/features/", "./src/crates/shared", "./src/crates/tgbot"]

resolver = "2"

[workspace.package]
name = "aska"
version = "0.1.0"
edition = "2021"

[package]
name = "aska"
version = "0.1.0"
edition = "2021"

[dependencies]
server = { path = "./src/crates/server/" }
features = { path = "./src/crates/features/" }
shared = { path = "./src/crates/shared/" }
tgbot = { path = "./src/crates/tgbot/"}

ctrlc = "3.4.5"

log = "0.4.22"
log4rs = "1.3.0"
tokio = { version = "1.39.2", features = ["full"] }
http-body-util = "0.1.2"

tower = "0.4.13"
serde-env = "0.2.0"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }

colored = "2.1.0"
chrono = "0.4.38"
sysinfo = "0.31.0"
form_urlencoded = "1.2.1"
multimap = "0.10.0"
lazy_static = "1.5.0"
toml = "0.8.19"
merge-struct = "0.1.0"
clap = { version = "4.5.16", features = ["derive"] }
rand = "0.8.5"
queues = "1.1.0"

bytes = "1.7.1"

[profile.dev]
lto = "off"
opt-level = 0
incremental = true

[profile.release]
opt-level = 3
lto = "fat"

[profile.profiling]
inherits = "release"
debug = true

[build-dependencies]
tonic-build = "0.12.1"
