[package]
name = "server"
version = "0.1.0"
edition = "2021"

[lib]
path = "./src/lib.rs"

[dependencies]
shared = { path = "../shared" }
features = { path = "../features" }
log = "0.4.22"
log4rs = "1.3.0"
hyper = { version = "1.4.1", features = ["full"] }
tokio = { version = "1.39.2", features = ["full"] }
http-body-util = "0.1.2"
hyper-util = { version = "0.1.6", features = ["full"] }

async-trait = "0.1.83"

tower = "0.4.13"
serde-env = "0.2.0"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }

colored = "2.1.0"
chrono = "0.4.38"
sysinfo = "0.31.0"
form_urlencoded = "1.2.1"
multimap = "0.10.0"
lazy_static = "1.5.0"
toml = "0.8.19"
merge-struct = "0.1.0"
clap = { version = "4.5.16", features = ["derive"] }
rand = "0.8.5"
queues = "1.1.0"

tonic = "0.12.1"
bytes = "1.7.1"
prost = "0.13.1"
prost-derive = "0.13.1"
tonic-reflection = "0.12.1"
actix = "0.13.5"
actix-web = { version = "4.9.0", default-features = false, features = [
    "http2",
    "macros",
    "unicode",
] }
actix-ws = "0.3.0"
futures-util = "0.3.30"

[dev-dependencies]
criterion = { version = "0.5.1", features = ["html_reports"] }
