[package]
name = "tgbot"
version = "0.1.0"
edition = "2021"

[dependencies]
features = { path = "../features/" }
shared = { path = "../shared/" }

teloxide = { version = "0.13", features = ["macros"] }

log = "0.4.22"
log4rs = "1.3.0"
tokio = { version = "1.39.2", features = ["full"] }

async-trait = "0.1.83"
