[package]
name = "tgbot"
version = "0.1.0"
edition = "2021"

[dependencies]
services = { path = "../services/" }
shared = { path = "../shared/" }

teloxide = { version = "0.13", features = ["macros"] }

log = "0.4.22"
log4rs = "1.3.0"
tokio = { version = "1.39.2", features = ["full"] }

async-trait = "0.1.83"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }

